deploy/ocp/service-gamemaster-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: https://github.com/glroland/trivia.git
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: gamemaster-svc
    app.kubernetes.io/component: gamemaster-svc
    app.kubernetes.io/instance: gamemaster-svc
    app.kubernetes.io/part-of: trivia
  name: gamemaster-svc
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: gamemaster-svc
    deploymentconfig: gamemaster-svc
  sessionAffinity: None
  type: ClusterIP
