deploy/ocp/service-mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    template.openshift.io/expose-uri: mongodb://{.spec.clusterIP}:{.spec.ports[?(.name=="mongo")].port}
  labels:
    template: mongodb-persistent-template
    template.openshift.io/template-instance-owner: aeeb66c8-3ca0-447a-a89d-5a8d9ec7f06a
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:template.openshift.io/expose-uri: {}
        f:labels:
          .: {}
          f:template: {}
          f:template.openshift.io/template-instance-owner: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":27017,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:name: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: openshift-controller-manager
    operation: Update
  name: mongodb
  namespace: trivia
  selfLink: /api/v1/namespaces/trivia/services/mongodb
spec:
  ports:
  - name: mongo
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    name: mongodb
  sessionAffinity: None
  type: ClusterIP
