deploy/ocp/route-app.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"question-svc"}]'
    openshift.io/host.generated: "true"
  creationTimestamp: "2020-10-25T22:42:23Z"
  labels:
    app: app
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: app
    app.kubernetes.io/name: nodejs
    app.kubernetes.io/part-of: trivia
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: "12"
  name: app
spec:
  port:
    targetPort: 8080-tcp
  tls:
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIEKzCCAxOgAwIBAgIUEbl6frxrwvK2aEo0LuyQT2Q2jfEwDQYJKoZIhvcNAQEF
[...]
      l3P4OkjQvGvLF7635AnT
      -----END CERTIFICATE-----
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIEKzCCAxOgAwIBAgIUEbl6frxrwvK2aEo0LuyQT2Q2jfEwDQYJKoZIhvcNAQEF
[...]
      l3P4OkjQvGvLF7635AnT
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: None
    key: |-
      -----BEGIN RSA PRIVATE KEY-----
      MIIEpAIBAAKCAQEAwTGlF2BWus7AhcyGLO1uFgX2jtBdn5/hVPTCxxBg1x8d1fj9
[...]
      leM16XtkRXO/roZKVZaRjF5nF4UG5tbsplAWgr4Evn607zxIKDgVKA==
      -----END RSA PRIVATE KEY-----
    termination: edge
  to:
    kind: Service
    name: app
    weight: 100
  wildcardPolicy: None
