deploy/ocp/route-gamemaster-svc.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: gamemaster-svc
    app.kubernetes.io/component: gamemaster-svc
    app.kubernetes.io/instance: gamemaster-svc
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: trivia
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-11-el7
  name: gamemaster-svc
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: gamemaster-svc
    weight: 100
  wildcardPolicy: None
