deploy/ocp/route-question-svc.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: question-svc
    app.kubernetes.io/component: question-svc
    app.kubernetes.io/instance: question-svc
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: trivia
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-11-el7
  name: question-svc
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: question-svc
    weight: 100
  wildcardPolicy: None
